--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "./src",
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
     "noEmit": false,
     "composite": true,
   }
