--- a/videos/demo/package.json
+++ b/videos/demo/package.json
@@ -15,7 +15,7 @@
     "react-dom": "19.0.0",
     "remotion": "4.0.298",
     "zod": "3.22.3",
-    "av-generator": "workspace:^"
+    "av-generator": "workspace:*"
   },
   "scripts": {
     "dev": "remotion studio",
