--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ videos/*            linguist-detectable=false
 videos/demo/**/*.ts            linguist-detectable=true
 core/**/*.ts            linguist-detectable=false
 core/**/*.tsx            linguist-detectable=false
+**/*.ts            linguist-detectable=false
+**/*.tsx            linguist-detectable=false
