--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ dist
 # Ignore the output video from Git but not videos you import into src/.
 out
 build
-**/*/public
+videos/*/public/*
+!videos/*/public/persist/
 
 tsconfig.tsbuildinfo
 
