--- a/core/package.json
+++ b/core/package.json
@@ -15,6 +15,7 @@
     "@remotion/captions": "4.0.300",
     "@remotion/media-parser": "4.0.298",
     "@remotion/media-utils": "4.0.298",
+    "framer-motion": "^12.23.22",
     "react": "19.0.0",
     "remotion": "4.0.298"
   }
